--- a/style.css
+++ b/style.css
@@ -588,150 +588,8 @@ header .logo a h1 span {
   color: #E6022D;
 }
 
-#footer .footer-container .brand .icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column;
-  flex-flow: column;
-}
-
-#footer .footer-container .brand .icons a {
-  text-decoration: none;
-  color: #E6022D;
-  font-size: 3rem;
-  margin: .5rem 0;
-  position: relative;
-}
-
-#footer .footer-container .brand .icons a::after {
-  content: attr(data-text);
-  position: absolute;
-  top: .8rem;
-  left: 3.5rem;
-  font-family: 'Exo 2', sans-serif;
-  font-style: italic;
-  font-size: 1.5rem;
-  color: #fff;
-}
-
-#footer .footer-container .contact-info {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0 25rem;
-  flex: 1 0 25rem;
-}
-
-#footer .footer-container .contact-info .info {
-  height: 16rem;
-  width: 5rem;
-  background: #E6022D;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  text-align: center;
-}
-
-#footer .footer-container .contact-info .info a {
-  font-size: 2rem;
-  text-decoration: none;
-  margin: 2rem 0;
-  color: #fff;
-  position: relative;
-}
-
-#footer .footer-container .contact-info .info a::after {
-  content: attr(data-text);
-  position: absolute;
-  top: .5rem;
-  left: 5.5rem;
-  width: 20rem;
-  text-align: left;
-  font-family: 'Exo 2', sans-serif;
-  font-style: italic;
-  font-size: 1.5rem;
-  color: #fff;
-}
-
-#footer .footer-container .letter {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0 25rem;
-  flex: 1 0 25rem;
-  margin-top: 1rem;
-}
-
-#footer .footer-container .letter h1 {
-  font-size: 3rem;
-  color: #E6022D;
-}
-
-#footer .footer-container .letter p {
-  color: #fff;
-  margin: 1rem 0;
-  font-size: 1.5rem;
-}
-
-#footer .footer-container .letter input {
-  height: 4rem;
-  background: transparent;
-  margin: 1rem 0;
-  padding: 0 1rem;
-  border: 0.2rem solid #E6022D;
-  outline: none;
-  color: #fff;
-  font-weight: bold;
-  width: 100%;
-}
-
-#footer .footer-container .letter input::-webkit-input-placeholder {
-  color: #ccc;
-}
-
-#footer .footer-container .letter input:-ms-input-placeholder {
-  color: #ccc;
-}
-
-#footer .footer-container .letter input::-ms-input-placeholder {
-  color: #ccc;
-}
-
-#footer .footer-container .letter input::placeholder {
-  color: #ccc;
-}
-
-#footer .footer-container .letter input:focus {
-  background: #E6022D;
-}
-
-#footer .footer-container .letter input[type="submit"] {
-  height: 4rem;
-  width: 14rem;
-  background: transparent;
-  border: 0.2rem solid #E6022D;
-  outline: none;
-  font-size: 1.5rem;
-  cursor: pointer;
-  color: #E6022D;
-  font-weight: bold;
-  background: #E6022D;
-  color: #fff;
-}
-
-#footer .footer-container .letter input[type="submit"]:hover {
-  background: #E6022D;
-  color: #fff;
-}
-
-#footer .footer-container .letter input[type="submit"]:hover {
-  background: transparent;
+#footer .contact-info img{
+  margin-top: 2rem;
 }
 
 .fa-times {
